--- a/domy.html
+++ b/domy.html
@@ -3,19 +3,41 @@
 <html lang="cs">
 <head>
     <meta charset="UTF-8">
-    <title>Modulové domy | Drevomodul.cz</title>
+    <title>Modulové domy</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header><h1>Modulové domy</h1></header>
+    <header>
+        <h1>Modulové domy</h1>
+        <nav>
+            <a href="index.html">Domů</a>
+            <a href="domy.html">Modulové domy</a>
+            <a href="stavebnice.html">Stavebnice</a>
+            <a href="prislusenstvi.html">Příslušenství</a>
+            <a href="konfigurator/index.html">Konfigurátor</a>
+        </nav>
+    </header>
     <main>
-        <p>Naše modulové domy jsou připraveny pro rychlou výstavbu i trvalé bydlení.</p>
-        <ul>
-            <li><strong>Modul Mini 25</strong> – 5×5 m, bez povolení</li>
-            <li><strong>Modul Start 40</strong> – 8×5 m, pro 1–2 osoby</li>
-            <li><strong>Modul Family 60</strong> – 10×6 m, rodinné řešení</li>
-        </ul>
-        <a href="konfigurator/index.html">Chci si dům nakonfigurovat</a>
+
+    <div class="box">
+        <img src="img/modul-mini.jpg" alt="Modul Mini" style="width:100%; border-radius:8px;">
+        <h2>Modul Mini 25</h2>
+        <p>5×5 m – bez stavebního povolení, ideální jako chata.</p>
+    </div>
+    <div class="box">
+        <img src="img/modul-start.jpg" alt="Modul Start" style="width:100%; border-radius:8px;">
+        <h2>Modul Start 40</h2>
+        <p>8×5 m – komfortní řešení pro jednotlivce nebo pár.</p>
+    </div>
+    <div class="box">
+        <img src="img/modul-family.jpg" alt="Modul Family" style="width:100%; border-radius:8px;">
+        <h2>Modul Family 60</h2>
+        <p>10×6 m – rodinné řešení se dvěma ložnicemi a koupelnou.</p>
+    </div>
+    
     </main>
+    <footer>
+        <p>&copy; 2025 Drevomodul.cz</p>
+    </footer>
 </body>
 </html>
