--- a/index.html
+++ b/index.html
@@ -3,24 +3,41 @@
 <html lang="cs">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drevomodul.cz</title>
+    <title>Drevomodul.cz – Domů</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1>Drevomodul.cz – Modulové domy a stavebnice</h1>
+        <h1>Drevomodul.cz</h1>
         <nav>
-            <a href="index.html">Domů</a> |
-            <a href="domy.html">Modulové domy</a> |
-            <a href="stavebnice.html">Stavebnice</a> |
-            <a href="prislusenstvi.html">Příslušenství</a> |
+            <a href="index.html">Domů</a>
+            <a href="domy.html">Modulové domy</a>
+            <a href="stavebnice.html">Stavebnice</a>
+            <a href="prislusenstvi.html">Příslušenství</a>
             <a href="konfigurator/index.html">Konfigurátor</a>
         </nav>
     </header>
     <main>
-        <h2>Vítejte na Drevomodul.cz</h2>
-        <p>Stavějte chytře – rychle, jednoduše a bez zbytečné byrokracie.</p>
+
+    <div class="box">
+        <h2>Modulové domy</h2>
+        <img src="img/modul-mini.jpg" alt="Modul Mini" style="width:100%; border-radius:8px;">
+        <p>Moderní domy do 25 m² bez povolení. Rychlá montáž, dostupná cena.</p>
+        <a class="button" href="domy.html">Zobrazit nabídku</a>
+    </div>
+    <div class="box">
+        <h2>Stavebnice</h2>
+        <img src="img/stavebnice-basic.jpg" alt="Stavebnice Basic" style="width:100%; border-radius:8px;">
+        <p>Postav si dům svépomocí. Tři úrovně vybavení: Basic, Plus, Extra.</p>
+        <a class="button" href="stavebnice.html">Prohlédnout stavebnice</a>
+    </div>
+    <div class="box">
+        <h2>Příslušenství</h2>
+        <img src="img/okno.jpg" alt="Okno" style="width:100%; border-radius:8px;">
+        <p>Okna, izolace, montážní pomůcky. Vše skladem k dodání.</p>
+        <a class="button" href="prislusenstvi.html">Více o příslušenství</a>
+    </div>
+    
     </main>
     <footer>
         <p>&copy; 2025 Drevomodul.cz</p>
