--- a/stavebnice.html
+++ b/stavebnice.html
@@ -3,19 +3,41 @@
 <html lang="cs">
 <head>
     <meta charset="UTF-8">
-    <title>Stavebnice domů | Drevomodul.cz</title>
+    <title>Stavebnice domů</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header><h1>Stavebnice domů</h1></header>
+    <header>
+        <h1>Stavebnice domů</h1>
+        <nav>
+            <a href="index.html">Domů</a>
+            <a href="domy.html">Modulové domy</a>
+            <a href="stavebnice.html">Stavebnice</a>
+            <a href="prislusenstvi.html">Příslušenství</a>
+            <a href="konfigurator/index.html">Konfigurátor</a>
+        </nav>
+    </header>
     <main>
-        <p>Vyber si stavebnici podle úrovně vybavení a postav si dům svépomocí.</p>
-        <ul>
-            <li><strong>Basic</strong> – nosná konstrukce a stěny</li>
-            <li><strong>Plus</strong> – přidána izolace, okna, střecha</li>
-            <li><strong>Extra</strong> – připraveno pro interiérové dokončení</li>
-        </ul>
-        <a href="konfigurator/index.html">Vybrat si stavebnici</a>
+
+    <div class="box">
+        <img src="img/stavebnice-basic.jpg" alt="Stavebnice Basic" style="width:100%; border-radius:8px;">
+        <h2>Basic</h2>
+        <p>Základní konstrukce – kostra + stěny.</p>
+    </div>
+    <div class="box">
+        <img src="img/stavebnice-plus.jpg" alt="Stavebnice Plus" style="width:100%; border-radius:8px;">
+        <h2>Plus</h2>
+        <p>Včetně izolace, střechy, oken – ideální pro dokončení.</p>
+    </div>
+    <div class="box">
+        <img src="img/stavebnice-extra.jpg" alt="Stavebnice Extra" style="width:100%; border-radius:8px;">
+        <h2>Extra</h2>
+        <p>Kompletní dům připravený na interiér.</p>
+    </div>
+    
     </main>
+    <footer>
+        <p>&copy; 2025 Drevomodul.cz</p>
+    </footer>
 </body>
 </html>
