--- a/prislusenstvi.html
+++ b/prislusenstvi.html
@@ -3,19 +3,41 @@
 <html lang="cs">
 <head>
     <meta charset="UTF-8">
-    <title>Příslušenství | Drevomodul.cz</title>
+    <title>Příslušenství</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header><h1>Příslušenství</h1></header>
+    <header>
+        <h1>Příslušenství</h1>
+        <nav>
+            <a href="index.html">Domů</a>
+            <a href="domy.html">Modulové domy</a>
+            <a href="stavebnice.html">Stavebnice</a>
+            <a href="prislusenstvi.html">Příslušenství</a>
+            <a href="konfigurator/index.html">Konfigurátor</a>
+        </nav>
+    </header>
     <main>
-        <p>Najdeš u nás vše potřebné pro dokončení svého modulu:</p>
-        <ul>
-            <li>Okna a dveře</li>
-            <li>Izolační sady</li>
-            <li>Podkladové rošty a montážní nářadí</li>
-        </ul>
-        <a href="konfigurator/index.html">Zobrazit konfigurátor</a>
+
+    <div class="box">
+        <img src="img/okno.jpg" alt="Okno" style="width:100%; border-radius:8px;">
+        <h2>Okna a dveře</h2>
+        <p>Kvalitní výplně pro modulové domy – skladem.</p>
+    </div>
+    <div class="box">
+        <img src="img/izolace.jpg" alt="Izolace" style="width:100%; border-radius:8px;">
+        <h2>Izolace</h2>
+        <p>Vata, PIR, parozábrana – pro stěny, střechy, podlahy.</p>
+    </div>
+    <div class="box">
+        <img src="img/montazni-sada.jpg" alt="Montážní sada" style="width:100%; border-radius:8px;">
+        <h2>Montážní sada</h2>
+        <p>Nářadí, spojovací materiál, vruty, kotvy a další.</p>
+    </div>
+    
     </main>
+    <footer>
+        <p>&copy; 2025 Drevomodul.cz</p>
+    </footer>
 </body>
 </html>
